@@ -182,23 +182,25 @@ https://api.map.baidu.com/lbsapi/getpoint/index.html
 
 （admin/node_modules是项目的依赖库）
 
-安装Node.js，要14或12版本（运行JavaScript的环境）（当前版本过高v22.9.0，还未降级）
+安装Node.js，要14或12版本（node是运行JavaScript的环境）
 
-安装Vue脚手架（Vue CLI 命令行界面，快速搭建Vue项目）（还未安装）
+安装Vue脚手架（Vue CLI 命令行界面，快速搭建Vue项目）（无需安装，包含在node_moudles里）
 
-后端代码位于door文件夹内，使用IDEA打开，配置好Maven（项目管理和构建工具，如果你已经有一个包含 pom.xml 文件的项目，直接在 IDEA 中选择 Open，然后选择项目根目录下的 pom.xml 文件。）
+（我看都是用的IDEA开的后端代码，可能还需要介绍软件下载方式。我安装了破解的版本，使用的是2024一月的版本，最新版本不支持破解，比较简单。破解方法是一个个人网站上的。放在收藏夹栏中了。但是默认字体很难看，我后面打算修改一下字体）
+
+后端代码位于door文件夹内，使用IDEA打开，配置好Maven（Maven是项目管理和构建工具，这里也不需要配置，只需要给项目选好jdk就行）
 
 villegePic/face和face里放的是测试用的面部图像
 
-doc/door.sql是数据库的脚本和测试数据，安装Navicat，使用这个脚本创建数据库，设计MySQL和Redis
+doc/door.sql是数据库的脚本和测试数据，安装Navicat（或者其它的数据库可视化管理工具，如果只想成功运行项目，甚至可以不用装），后续会在IDEA中使用这个脚本创建数据库，需要安装和启用MySQL和Redis，MySQL版本不低于5.7（现在能装的最低版本已经到8了，实测也是可以兼容的）
 
 数据库名叫door，有11张表，camerainfo（摄像头）, community（小区）, inoutrecord（进出记录）, manualrecord（访客登记）, personinfo（居民信息）, sys_log（日志）, sys_menu（菜单）, sys_role（角色-超级管理员、普通角色）, sys_role_menu（权限）, sys_user（系统登录用户）, sys_user_role（登录用户所属角色）
 
-MySQL版本不低于5.7
 
-前端运行：Node.js 14.x版本或12.x版本，建议不要使用最新版本（所以我需要降级）
 
-在前端代码的admin/package.json中可以查看版本（该文件中含有水印）
+前端运行：Node.js 14.x版本或12.x版本，建议不要使用最新版本（可以使用nvm切换node版本，现在最低也只有14版本了）
+
+在前端代码的admin/package.json中可以查看版本（该文件中可以签名，第五行）
 
 main.js中主要是3行Cookies, 22-echarts, 27-BaiduMap-61ak
 
@@ -206,19 +208,9 @@ main.js中主要是3行Cookies, 22-echarts, 27-BaiduMap-61ak
 
 点击debug开始运行后端项目
 
-（macOS报错信息：
-构建进程终止异常: 
-nice -n 10 /opt/homebrew/Cellar/openjdk/21.0.3/libexec/openjdk.jdk/Contents/Home/bin/java -Xmx700m -Djava.awt.headless=true "-Djna.boot.library.path=/Applications/IntelliJ IDEA.app/Contents/lib/jna/aarch64" -Djna.nosys=true -Djna.noclasspath=true --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED -Dexternal.project.config=/Users/yanfeiyu/Library/Caches/JetBrains/IntelliJIdea2024.2/projects/door.1d96925f/external_build_system -Dcompile.parallel=false -Drebuild.on.dependency.change=true -Didea.IntToIntBtree.page.size=32768 -Djdt.compiler.useSingleThread=true -Daether.connector.resumeDownloads=false -Dio.netty.initialSeedUniquifier=3033586465212712129 -Dfile.encoding=UTF-8 -Duser.language=zh -Duser.country=CN -Didea.paths.selector=IntelliJIdea2024.2 "-Djps.language.bundle=/Applications/IntelliJ IDEA.app/Contents/plugins/localization-zh/lib/localization-zh.jar" "-Didea.home.path=/Applications/IntelliJ IDEA.app/Contents" "-Didea.config.path=/Users/yanfeiyu/Library/Application Support/JetBrains/IntelliJIdea2024.2" "-Didea.plugins.path=/Users/yanfeiyu/Library/Application Support/JetBrains/IntelliJIdea2024.2/plugins" -Djps.log.dir=/Users/yanfeiyu/Library/Logs/JetBrains/IntelliJIdea2024.2/build-log "-Djps.fallback.jdk.home=/Applications/IntelliJ IDEA.app/Contents/jbr/Contents/Home" -Djps.fallback.jdk.version=21.0.4 -Dio.netty.noUnsafe=true -Djava.io.tmpdir=/Users/yanfeiyu/Library/Caches/JetBrains/IntelliJIdea2024.2/compile-server/door_573e4c75/_temp_ -Djps.backward.ref.index.builder=true -Djps.backward.ref.index.builder.fs.case.sensitive=false -Djps.track.ap.dependencies=false "-Djps.kotlin.home=/Applications/IntelliJ IDEA.app/Contents/plugins/Kotlin/kotlinc" -Dkotlin.incremental.compilation=true -Dkotlin.incremental.compilation.js=true -Dkotlin.daemon.enabled -Dkotlin.daemon.client.alive.path=\"/var/folders/4n/sd4ck2wn61bdn23b4cclcn440000gn/T/kotlin-idea-7912806462901765990-is-running\" -Dide.propagate.context=false -classpath "/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/jps-launcher.jar" org.jetbrains.jps.cmdline.Launcher "/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/jps-builders.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/jps-builders-6.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/jps-javac-extension.jar:/Applications/IntelliJ IDEA.app/Contents/lib/util-8.jar:/Applications/IntelliJ IDEA.app/Contents/lib/util_rt.jar:/Applications/IntelliJ IDEA.app/Contents/lib/platform-loader.jar:/Applications/IntelliJ IDEA.app/Contents/lib/annotations.jar:/Applications/IntelliJ IDEA.app/Contents/lib/trove.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/jetbrains.kotlinx.metadata.jvm.jar:/Applications/IntelliJ IDEA.app/Contents/lib/protobuf.jar:/Applications/IntelliJ IDEA.app/Contents/lib/jps-model.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/javac2.jar:/Applications/IntelliJ IDEA.app/Contents/lib/forms_rt.jar:/Applications/IntelliJ IDEA.app/Contents/lib/util.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/aether-dependency-resolver.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/maven-resolver-connector-basic.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/maven-resolver-transport-file.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/maven-resolver-transport-http.jar:/Applications/IntelliJ IDEA.app/Contents/lib/idea_rt.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/JavaEE/lib/jasper-v2-rt.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/Kotlin/lib/jps/kotlin-jps-plugin.jar:/Applications/IntelliJ IDEA.app/Contents/lib/util-8.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/java/lib/jps/java-compiler-charts-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/eclipse/lib/eclipse-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/eclipse/lib/eclipse-common.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/javaFX/lib/javaFX-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/javaFX/lib/javaFX-common.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/JavaEE/lib/jps/javaee-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/uiDesigner/lib/jps/java-guiForms-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/platform-langInjection/lib/java-langInjection-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/Groovy/lib/groovy-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/Groovy/lib/groovy-constants-rt.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/maven/lib/maven-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/gradle-java/lib/gradle-jps.jar:/Applications/IntelliJ IDEA.app/Contents/plugins/JPA/lib/jps/javaee-jpa-jps.jar" org.jetbrains.jps.cmdline.BuildMain 127.0.0.1 49974 5f31cd0b-0103-491c-8373-9bbb908b7ee9 /Users/yanfeiyu/Library/Caches/JetBrains/IntelliJIdea2024.2/compile-server
-nice: /opt/homebrew/Cellar/openjdk/21.0.3/libexec/openjdk.jdk/Contents/Home/bin/java: No such file or directory
-）
-
-（解决方案：安装zulu-8，并卸载21版本，然后在项目和Maven中指定zulu-8，参考https://chatgpt.com/share/6734221d-e94c-8000-a151-bcae1938b7ae）
-
-（接下来是数据库连接报错了，因为还没配置数据库，我继续看视频了）
-
 vue.config.js中11行也有个端口，但这不是前端项目的端口（是Vue的端口？）
 
-（我尝试安装了MySQL，按照一个B站视频上操作https://www.bilibili.com/video/BV1jQ4y1G7xP，但发现端口不是默认的3306，代码里还没找，方案1是改代码，但我不太想破坏原始代码，方案2就是改数据库端口到3308，Mac端修改不太方便，另外我还安装了一些工具比如vue和nodejs，另外我还发现后端的application.yml中有文件存储路径，比如32、35、36行，这个也需要修改）
+（我尝试安装了MySQL，按照一个B站视频上操作https://www.bilibili.com/video/BV1jQ4y1G7xP，但发现端口不是默认的3306，代码里还没找，方案1是改代码，但我不太想破坏原始代码，方案2就是改数据库端口到3308，Mac端修改不太方便，另外我还安装了一些工具比如vue和nodejs，另外我还发现后端的application.yml中有文件存储路径，比如32、35、36行，这个好像不用修改，我最终选择了方案1，修改后端代码中application-dev.yml，13行的端口号和15行的密码）
 
 前端文件.env.development是开发环境的接口地址，即本机地址，另外一个是.env.production，这是打包以后的程序放在服务器上的接口，如果不放在服务器上，那就改成本机地址
 
@@ -226,27 +218,49 @@ vue.config.js中11行也有个端口，但这不是前端项目的端口（是Vu
 
 运行前端，在admin路径下 npm run dev
 
-在door路径下，WebMvcConfig.java文件中，最后有重要的路径，和application.yml的upload字段里的一致，不能说完全一致，后缀能匹配上
+后端配置文件：application-pro.yml和apllication-dev.yml是有关数据库的配置，在这里改端口号，application.yml是公共配置，34行是文件上传位置，修改为自己电脑上对应的路径，要修改face和excel对应的路径，第三个字段urlPrefix是拼接路径用的前缀，让数据库访问到数据，比如让navicat连上数据库，在personInfo表里的faceUrl字段里的链接，用浏览器访问看是否能成功显示图片，这个链接就是拼接后的结果
+
+后端的WebMvcConfig.java文件中，这是一个配置类，addCorsMappings方法是跨域的配置，实现图片映射路径拼接的是addResourceHandlers方法，也就是上面提到的能在浏览器中访问图片的链接，相当于把本机文件路径映射为你想要指定的路径，从而在浏览器中访问。
+
+后端的FilterConfig.java文件是拦截器，ShiroConfig.java是过滤器，和登录权限有关，它们一般不要改动了。
 
 
 
 ## 项目结构
 
-我看都是用的IDEA开的后端代码，可能还需要介绍软件下载方式
+后端，utils中是存放工具类，比如ExportToExcel是居民信息导出方法；aspect是日志相关；entity里的sys有重要的Java bin，一个javabin对应一个表格，用了mybaitsplus，可以用@TableName直接绑定表（源代码中，这部分有很多水印，已清除），用@TableId绑定表的字段，用@ApiModel和swagger写文档。
 
-我安装了破解的版本，使用的是2024一月的版本，最新版本不支持破解，比较简单
+上面的内容不是具体的操作，具体的数据库操作代码位于dao文件夹的sys目录下，在@Select注解中写的sql语句，一个sql语句对应一个方法。
 
-破解方法是一个个人网站上的。放在收藏夹栏中了。
+因为使用了mybaits-plus，只要传了page对象，就可以实现分页
 
-但是默认字体很难看，我后面打算修改一下字体
+然后是service/sys/impl下的内容，这个文件夹内是service层，impl同级目录下还有函数的声明
 
-讲到后端中sys文件夹里的Java文件时，项目和视频中演示的文件有出入，比如没有AgentInfoMapper
+那么上面介绍的三个文件夹中的代码就是这样对应的：PersonInfoService->PersonInfoServiceImpl->PersonInfoMapper->PersonInfoVo
 
-要记住的是一个表对应一个java bin对应一个service对应一个service的实现
+另外还有modules/controller/sys下面的控制器相关的，如PersonInfoController，它们是和前端接口打交道的代码，比如@RequestMapping注解
+
+Swagger2Config是配合上面的控制器写文档的
+
+这个文档可以在后端运行起来后，终端输出的第三个链接访问到
+
+face文件夹下是人脸识别相关的代码
+
+dade文件夹下是冗余代码，但我不敢乱删
+
+config下是基本的配置，比如拦截器、shiro的配置
+
+common文件夹下也有很多冗余代码和水印
+
+前端
+
+前后端通信，request.js中有用axios
+
+（为需要自定义的代码做了思维导图，删除了所有的电子水印）
 
 ## mybatis-plus
 
-mysql端口，项目中开的是3308，用户root，密码1234（我是12345678）
+mysql端口，项目中开的是3308，用户root，密码12345678（这是初始化MySQL时设置的）
 
 第五、六、七较为重要
 
